--- a/UI/project-management/package.json
+++ b/UI/project-management/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/entity": "^6.1.2",
+    "@ngrx/store": "^2.2.3",
+    "@stomp/ng2-stompjs": "^7.0.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
